# Philosophers

philo_one/: Makefile  ft_itoa.c  main.c  ph_destroy.c  ph_error.c  ph_init.c  ph_itoa.c  ph_life.c  ph_monitor.c  ph_putstr_buf.c  ph_read_instructions.c  ph_status.c  ph_status_write.c  ph_treads.c  ph_utils.c  philo_one.h  read_instructions.c
philo_three/: CMakeLists.txt  Makefile  main.c  ph_destroy.c  ph_error.c  ph_init.c  ph_itoa.c  ph_life.c  ph_monitor.c  ph_open_main_sem.c  ph_open_sem.c  ph_putstr_buf.c  ph_read_instructions.c  ph_run_process.c  ph_status.c  ph_status_write.c  ph_utils.c  philo_three.h
philo_two/: CMakeLists.txt  Makefile  main.c  ph_destroy.c  ph_error.c  ph_init.c  ph_itoa.c  ph_life.c  ph_monitor.c  ph_open_main_sem.c  ph_open_sem.c  ph_putstr_buf.c  ph_read_instructions.c  ph_status.c  ph_status_write.c  ph_treads.c  ph_utils.c  philo_two.h
